feat: implementation auth
