# doc/api.yaml
@@ -9,6 +9,15 @@ servers:
 
 components:
   schemas:
+    Auth:
+      type: object
+      properties:
+        token:
+          type: string
+          example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiJiMTY2NmY3YS0yYTRkLTQ2YWUtYTE1ZS1iMDBhODA3NjM0NTIiLCJsb2dpbiI6InN0cmluZyIsImlhdCI6MTY1OTE4MjkwMiwiZXhwIjoxNjU5MTg2NTAyfQ.bhLNYO0ewnAUkSOgMaUU9ayM2nNzlk52ycMu7SpGIKw'
+        refreshToken:
+          type: string
+          example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiJiMTY2NmY3YS0yYTRkLTQ2YWUtYTE1ZS1iMDBhODA3NjM0NTIiLCJsb2dpbiI6InN0cmluZyIsImlhdCI6MTY1OTE4MjkwMiwiZXhwIjoxNjU5MjY5MzAyfQ.8GN_JS7aTsoK4lzM6kU8HSrkNnW7WY7x-gv5VYz4t10'
     User:
       type: object
       properties:
@@ -114,81 +123,106 @@ components:
       bearerFormat: JWT
 
 security:
-  - bearerAuth: []
+  - bearerAuth: [ ]
 
 paths:
-  # /login:
-  #   post:
-  #     tags:
-  #       - Login
-  #     security: []
-  #     summary: Login
-  #     description: Logins a user and returns a JWT-token
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             title: example
-  #             properties:
-  #               login:
-  #                 type: string
-  #                 description: Username
-  #               password:
-  #                 type: string
-  #                 description: Password
-  #             required:
-  #               - user
-  #               - login
-  #     responses:
-  #       200:
-  #         description: Successful login.
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 token:
-  #                   type: string
-  #               description: JWT Token
-  #       403:
-  #         description: Incorrect login or password
-  # /signup:
-  #   post:
-  #     tags:
-  #       - Signup
-  #     security: []
-  #     summary: Signup
-  #     description: Signup a user
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             title: example
-  #             properties:
-  #               login:
-  #                 type: string
-  #                 minLength: 3
-  #                 maxLength: 255
-  #                 description: Username
-  #               password:
-  #                 type: string
-  #                 format: password
-  #                 pattern: ^[a-zA-Z0-9]{3,30}
-  #                 description: Password
-  #             required:
-  #               - login
-  #               - password
-  #     responses:
-  #       204:
-  #         description: Successful signup
-  #       400:
-  #         description: Bad request
-  #       409:
-  #         description: Conflict. Login already exists
+  /auth/login:
+    post:
+      tags:
+        - Auth
+      security: [ ]
+      summary: Login
+      description: Logins a user and returns a JWT-token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - user
+                - login
+      responses:
+        200:
+          description: Successful login.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Auth'
+        403:
+          description: Incorrect login or password
+  /auth/signup:
+    post:
+      tags:
+        - Auth
+      security: [ ]
+      summary: Signup
+      description: Signup a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  minLength: 3
+                  maxLength: 255
+                  description: Username
+                password:
+                  type: string
+                  format: password
+                  pattern: ^[a-zA-Z0-9]{3,30}
+                  description: Password
+              required:
+                - login
+                - password
+      responses:
+        201:
+          description: Successful signup
+        400:
+          description: Bad request
+        403:
+          description: No user with such login and password
+  /auth/refresh:
+    post:
+      tags:
+        - Auth
+      summary: Update token and refresh token
+      description: Update token and refresh token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                refreshToken:
+                  type: string
+                  description: Refresh Token
+
+      responses:
+        200:
+          description: New token and refresh token has been created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Auth'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        403:
+          description: Refresh token is invalid or expired
   /user:
     get:
       tags:
@@ -204,8 +238,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Users
@@ -237,8 +271,8 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           description: Bad request. body does not contain required fields
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /user/{userId}:
     parameters:
       - name: userId
@@ -260,11 +294,10 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           description: Bad request. userId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
-
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
         - Users
@@ -313,13 +346,12 @@ paths:
                     example: 1655999999
         400:
           description: Bad request. userId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         403:
-          description: oldPassword is wrong
+          description: oldPassowrd is wrong
         404:
           description: User not found
-
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Users
@@ -330,14 +362,12 @@ paths:
           description: The user has been deleted
         400:
           description: Bad request. userId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
   /track:
     get:
       tags:
-        - Track
+        - Tracks
       summary: Get tracks list
       description: Gets all library tracks list
       responses:
@@ -349,11 +379,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Track'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
-        - Track
+        - Tracks
       summary: Add new track
       description: Add new track information
       requestBody:
@@ -386,8 +416,8 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           description: Bad request. body does not contain required fields
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /track/{id}:
     parameters:
       - name: id
@@ -398,7 +428,7 @@ paths:
           format: uuid
     get:
       tags:
-        - Track
+        - Tracks
       summary: Get single track by id
       description: Gets single track by id
       responses:
@@ -410,13 +440,13 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           description: Bad request. trackId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
-        - Track
+        - Tracks
       summary: Update track information
       description: Update library track information by UUID
       requestBody:
@@ -474,30 +504,30 @@ paths:
                     nullable: true
         400:
           description: Bad request. trackId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
-        - Track
+        - Tracks
       summary: Delete track
       description: Delete track from library
       responses:
         204:
-          description: Deleted successfully
+          description: Delelted succesfully
         400:
           description: Bad request. trackId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
   /album:
     get:
       tags:
-        - Album
+        - Albums
       summary: Get albums list
-      description: Gets all library albums list
+      description: Gets all library alibums list
       responses:
         200:
           description: Successful operation
@@ -507,11 +537,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Album'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
-        - Album
+        - Albums
       summary: Add new album
       description: Add new album information
       requestBody:
@@ -535,15 +565,15 @@ paths:
                 - year
       responses:
         201:
-          description: Album is created
+          description: Almub is created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. body does not contain required fields
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /album/{id}:
     parameters:
       - name: id
@@ -554,7 +584,7 @@ paths:
           format: uuid
     get:
       tags:
-        - Album
+        - Albums
       summary: Get single album by id
       description: Gets single album by id
       responses:
@@ -566,13 +596,13 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. albumId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
-        - Album
+        - Albums
       summary: Update album information
       description: Update library album information by UUID
       requestBody:
@@ -603,28 +633,28 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. albumId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
     delete:
       tags:
-        - Album
+        - Albums
       summary: Delete album
       description: Delete album from library
       responses:
         204:
-          description: Deleted successfully
+          description: Deleted succesfully
         400:
           description: Bad request. albumId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
   /artist:
     get:
       tags:
-        - Artist
+        - Artists
       summary: Get all artists
       description: Gets all artists
       responses:
@@ -636,11 +666,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Artist'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
-        - Artist
+        - Artists
       summary: Add new artist
       description: Add new artist
       requestBody:
@@ -666,8 +696,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. body does not contain required fields
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /artist/{id}:
     parameters:
       - name: id
@@ -678,7 +708,7 @@ paths:
           format: uuid
     get:
       tags:
-        - Artist
+        - Artists
       summary: Get single artist by id
       description: Get single artist by id
       responses:
@@ -690,13 +720,11 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. artistId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
     put:
       tags:
-        - Artist
+        - Artists
       summary: Update artist information
       description: Update artist information by UUID
       requestBody:
@@ -722,22 +750,22 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. artistId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
     delete:
       tags:
-        - Artist
+        - Artists
       summary: Delete artist
       description: Delete artist from library
       responses:
         204:
-          description: Deleted successfully
+          description: Delelted succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
   /favs:
@@ -753,8 +781,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Favorites'
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/track/{id}:
     parameters:
       - name: id
@@ -770,11 +798,11 @@ paths:
       description: Add track to the favorites
       responses:
         201:
-          description: Added successfully
+          description: Added succesfully
         400:
-          description: Bad. trackId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+          description: Bad. trackId is invalid (not uuid)'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Track with id doesn't exist.
     delete:
@@ -784,11 +812,11 @@ paths:
       description: Delete track from favorites
       responses:
         204:
-          description: Deleted successfully
+          description: Deleted succesfully
         400:
           description: Bad. trackId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
   /favs/album/{id}:
@@ -806,11 +834,11 @@ paths:
       description: Add album to the favorites
       responses:
         201:
-          description: Added successfully
+          description: Added succesfully
         400:
           description: Bad. albumId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Album with id doesn't exist.
     delete:
@@ -820,11 +848,11 @@ paths:
       description: Delete album from favorites
       responses:
         204:
-          description: Deleted successfully
+          description: Deleted succesfully
         400:
           description: Bad. albumId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
   /favs/artist/{id}:
@@ -842,11 +870,11 @@ paths:
       description: Add artist to the favorites
       responses:
         201:
-          description: Added successfully
+          description: Added succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Artist with id doesn't exist.
     delete:
@@ -856,10 +884,10 @@ paths:
       description: Delete artist from favorites
       responses:
         204:
-          description: Deleted successfully
+          description: Deleted succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-        # 401:
-        #   $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
