# src/auth/auth.controller.ts
@@ -1,44 +1,47 @@
+import { RequestWithUser } from './requestWithUser.interface';
+import { JwtRefreshGuard } from './guards/jwt-refresh.guard';
 import {
-  Body,
-  ClassSerializerInterceptor,
   Controller,
-  HttpCode,
   Post,
-  Request,
-  UseGuards,
+  Body,
+  Header,
   UseInterceptors,
+  ClassSerializerInterceptor,
+  HttpCode,
+  Req,
+  UseGuards,
 } from '@nestjs/common';
 import { AuthService } from './auth.service';
-import { CreateUserDto } from '../user/dto/create-user.dto';
-import { LocalAuthGuard } from './guards/local-auth.guard';
-import { Public } from './guards/jwt-auth.guard';
+import { CreateAuthDto } from './dto/create-auth.dto';
+import { LoginAuthDto } from './dto/login-auth.dto';
 
 @Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
-  @Public()
-  @Post('/signup')
-  @UseInterceptors(ClassSerializerInterceptor)
+  @Post('signup')
   @HttpCode(201)
-  async signup(@Body() createUserDto: CreateUserDto) {
-    return await this.authService.signup(createUserDto);
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  create(@Body() createAuthDto: CreateAuthDto) {
+    return this.authService.create(createAuthDto);
   }
 
-  @Public()
-  @UseGuards(LocalAuthGuard)
-  @Post('/login')
-  @UseInterceptors(ClassSerializerInterceptor)
   @HttpCode(200)
-  async login(@Request() req) {
-    return await this.authService.login(req.user);
+  @Post('login')
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  login(@Body() loginAuthDto: LoginAuthDto, @Req() request: any) {
+    return this.authService.login(loginAuthDto);
   }
 
-  @Public()
-  @Post('/refresh')
-  @UseInterceptors(ClassSerializerInterceptor)
   @HttpCode(200)
-  async refresh(@Request() req) {
-    return await this.authService.refresh(req.body);
+  @UseGuards(JwtRefreshGuard)
+  @Post('refresh')
+  @Header('Content-Type', 'application/json')
+  @UseInterceptors(ClassSerializerInterceptor)
+  refreshToken(@Req() req: RequestWithUser) {
+    const user = req.user;
+    return this.authService.getTokens(user.id, user.login);
   }
 }
