# src/auth/dto/create-auth.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class CreateAuthDto {
+  @IsNotEmpty()
+  @IsString()
+  readonly login: string;
+
+  @IsNotEmpty()
+  @IsString()
+  readonly password: string;
+}
