# src/auth/dto/refresh-auth.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class RefreshAuthDto {
+  @IsNotEmpty()
+  @IsString()
+  readonly refreshToken: string;
+}
